# junkworks

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp
cmake/: functions.cmake
demos/client_server/: CMakeLists.txt  client.cpp  client_demo.cpp  server.cpp  server_demo.cpp
demos/client_server_client/: CMakeLists.txt  client_txrx.cpp  server_txrx.cpp
demos/client_server_socket/: CMakeLists.txt  client_socket_demo.cpp
demos/counting/: CMakeLists.txt  client_counter.cpp  server_counter.cpp
demos/handshake/: CMakeLists.txt  c_handshake.cpp  s_handshake.cpp
junkwork/: CMakeLists.txt
junkwork/include/junkwork/: basic_udp.hpp
junkwork/src/: basic_udp.cpp
junkworks/: CMakeLists.txt
junkworks/include/junkworks/: basic_udp.h  basic_udp.hpp  client.hpp  client_behavior_interface.hpp  ipv4add.hpp  network_common.h  server.hpp  server_behavior_interface.hpp  types.hpp  udp_socket.hpp  udp_socket_wrapper.hpp
junkworks/src/: basic_udp.c  basic_udp.cpp  client.cpp  client_behavior_interface.cpp  ipv4add.cpp  server.cpp  server_behavior_interface.cpp  udp_socket.cpp  udp_socket_wrapper.cpp
